# mqtt-client-training

./: README.md
JavaScript/: README.md  index.html
JavaScript/css/: log.css
JavaScript/js/: log.js  main.js
Python/: README.md  pyproject.toml
Python/src/: publisher01.py  subscriber01.py
