[tool.poetry]
name = "mqtt-training"
version = "0.1.0"
description = ""
authors = ["Takahiro55555 <tkhr.corei7@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
